AX: VoiceOver does not announce button in text if button is in shadow root https://bugs.webkit.org/show_bug.cgi?id=264410 rdar://118118138

Reviewed by Tyler Wilcock.

In shadow DOM elements, if text was within nested elements, textUnderElement would not include it.

This patch resolves that by adding to our logic for when we decide whether or not to skip a child's
text. Instead of just checking whether the child's parent and the current node match, we also check
that the elements are either both in the DOM or Shadow DOM.

* LayoutTests/accessibility/custom-elements/shadow-element-text-expected.txt: Added.
* LayoutTests/accessibility/custom-elements/shadow-element-text.html: Added.
* LayoutTests/platform/glib/accessibility/custom-elements/shadow-element-text-expected.txt: Added.
* Source/WebCore/accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::textUnderElement const):

Canonical link: https://commits.webkit.org/270542@main